# america_ecommerce

./: .env  .gitignore  4.2.0  EDA-KPIs-e-MAIS.docx  README.md  environment.yml  pyproject.toml  requirements.txt  setup.py
notebook/: modelos_ml.ipynb
notebook/01_extract/: kaggle_datasets.ipynb
notebook/02_transform/: data_cleaning.ipynb  feature_engineering.ipynb
notebook/03_eda/: Connection_transfer_to_sql.ipynb  exploratory_analysis.ipynb
notebook/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
notebook/catboost_info/learn/: events.out.tfevents
src/: config.py  main.py
src/data_extraction/: csv_extraction.py  database_extraction.py  excel_extraction.py  json_extraction.py  parquet_extraction.py  web_extraction.py  xml_extraction.py
src/data_ingestion/: api_extraction.py  ibge_ingestion.py  kaggle_ingestion.py  s3_ingestion.py
src/e_commerce.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/e_commerce/conections/: sql.py
src/e_commerce/config/: settings.py
src/e_commerce/data_extraction/: csv_extraction.py  excel_extraction.py  extractor.py  json_extraction.py  parquet_extraction.py  s3_utils.py
src/etl/: __init__.py  column_utils.py  data_cleaning.py  save.py  transform.py
src/features/: balancing.py  encoding.py  outliers.py  preprocessing.py
src/models/: model_factory.py  pipeline_classification.py  pipeline_clustering.py  pipeline_regression.py  save_load_model.py
src/utils/: init_project.py
src/visualization/: __init__.py  advanced_charts.py  basic_charts.py  distribution_charts.py  relationship_charts.py
(+23 files in other folders)
